--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^4.3.1
   http: ^0.13.5
   crypto: ^3.0.2
+  linked_scroll_controller: ^0.1.2
 
 dev_dependencies:
   flutter_test:
